# lib/db/src/schema/index.ts
@@ -14,3 +14,5 @@ export * from "./rightToRefuse.js";
 export * from "./attachments.js";
 export * from "./inspectionChecklists.js";
 export * from "./folderFiles.js";
+export * from "./conversations.js";
+export * from "./messages.js";
